--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,9 @@ psycopg2==2.7.1
 cryptography==1.9
 grampg==0.3.0
 lxml==4.1.1
+gspread==0.6.2
+oauth2client==4.1.2
+pytz==2013.7
+simplejson==3.10.0
+urllib3==1.21.1
+google-api-python-client==1.6.4
